# SmartRailHostctrl

./: .gitignore  CMakeLists.txt  NOTICE  README.md  custom_rosconsole.conf  package.xml
data/: v103_2018-05-04-15-42-21.bag
include/: fletcher32.h
include/rosserial_server/: async_read_buffer.h  pgs_protocol.h  pgs_session.h  serial_protocol.h  serial_session.h  session.h
include/smartrail_hostctrl/: pgs_node.hpp  pgs_session.h  serial_protocol.h  serial_streaming.hpp
launch/: pgs_node.launch  smartrail.launch  streaming_pgs_data.launch
msg/: MessageBytes.msg  PgsCorrection.msg  PgsDirectControl.msg
scripts/: nodding.py  pan_scan.sh  smartrail.service  smartrail_service.sh  tilt_scan.sh
src/: pan_scan.cpp  pgs_node.cpp  pgs_steam_node.cpp  pgs_stream_node.cpp  tilt_scan.cpp  todo.md
tests/: CMakeLists.txt  hostserial.cpp  package.xml  pty_util.cpp  test_fletcher32.cpp  test_serial.cpp  test_timer.cpp
tests/include/: pty_util.hpp
tests/include/hostctrl/: hostserial.hpp
