<?xml version="1.0"?>
<package format="2">
  <name>smartrail_hostctrl</name>
  <version>1.0.1</version>
  <description>the smartrail host controller presents a ROS package consisting of nodes to integrate communications, control and kinematics between the smart rail precision guidance scope and gimbal.</description>

  <maintainer email="gary.hendrick.fellow@sofwerx.org">Gary</maintainer>
  <license>MIT</license>

  <author email="gary.hendrick.fellow@sofwerx.org">Gary</author>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>flir_ptu_driver</depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>boost</test_depend>
  <test_depend>roscpp</test_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
