<?xml version ="1.0"?>
<package>
    <name>smartrail_hostctrl</name>
    <version>0.1.1</version>
    <description></description>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <test_depend>boost</test_depend>
    <run_depend>boost</run_depend>
</package>
